# test2

RationalVue/: CMakeLists.txt  CMakeSettings.json  CameraTest.cpp  README.md  build.md  build.sh  calc.cl  common.cpp  common.h  default.ini  default.qss  main.cpp  mainResource.qrc  syscontroller.cpp  syscontroller.h  uwc.cpp  uwc.h  zh.qm  zh.ts
RationalVue/Doc/: 07 高空抛物软著设计说明书.docx  接口说明.docx
RationalVue/MySQL/include/: my_config.h  mysql_version.h
RationalVue/MySQL/lib/: libmysql.lib
RationalVue/UWC/include/: UWC4000.h
RationalVue/UWC/lib/: UWC4000.lib
RationalVue/camera/: HKCamera.cpp  HKCamera.h  nvr.cpp  nvr.h
RationalVue/cmake/: FindGlog.cmake  FindHCNet.cmake
RationalVue/common/: ApplicationSetting.h  BaseProcessLogic.h  BaseWidget.h  CommonData.h  ConstructorElement.h  Coordinate.h  DMISSetting.h  DesignerParameter.h  Element.h  FeatureSetting.h  GeneralSetting.h  MeasureSetting.h  OutputSetting.h  PartImage.h  PrefixSetting.h  Sensor.h  Solution.h  SolutionSetting.h  TheryElement.h  Tolerance.h  ToleranceSetting.h  UISetting.h
RationalVue/db/: dbManager.cpp  dbManager.h  newdb.cpp  newdb.h
RationalVue/detect/: CCurveFit.cpp  CCurveFit.h  CDocument.cpp  CDocument.h  CFeature.h  CHungarianAlg.cpp  CHungarianAlg.h  CImageMatching.cpp  CImageMatching.h  CKalman.cpp  CKalman.h  CObjectDetection.cpp  CObjectDetection.h  CObjectRect.h  CParams.h  CPrediction.h  CTracker.cpp  CTracker.h  CTracking.cpp  CTracking.h  CVibe.cpp  CVibe.h  ControlParam.h  Ctrack.cpp  Ctrack.h  EdgeDetection.h
RationalVue/glog/lib/: glog.lib  glogd.lib
RationalVue/gui/DataZoneLeft/: dataZoneLeft.cpp  dataZoneLeft.h  dataZoneLeftDockWidget.ui  dataZoneLeftIcon.qrc  dataZoneListWidget.cpp  dataZoneListWidget.h
RationalVue/gui/DataZoneRight/: dataZoneRight.cpp  dataZoneRight.h  dataZoneRightDockWidget.ui  res.qrc
RationalVue/gui/DataZoneRight/css/: qss.qss  styleSheet.css
RationalVue/gui/DimensionReportZone/: dimensionReportZone.cpp  dimensionReportZone.h  dimensionReportZone.ui  occQt.cpp  occQt.h  occView.cpp  occView.h  ui_occQt.h
RationalVue/gui/GraphiceZone/: celementpickupscene.cpp  celementpickupscene.h  celementpickupview.cpp  celementpickupview.h  cpaintview.cpp  cpaintview.h  cpaintzonemainwindow.cpp  cpaintzonemainwindow.h  cpaintzonemainwindow.ui  graphiceZone.cpp  graphiceZone.h  graphiceZone.ui  images.qrc  pemainwindow.cpp  pemainwindow.h  pemainwindow.ui  ui_cpaintzonemainwindow.h
RationalVue/gui/LightControl/: createLightControl.cpp  createLightControl.h  icons.qrc  lightCircle.cpp  lightCircle.h  lightControlDockWidget.ui
RationalVue/gui/MachineStatusZone/: machineStatusZone.cpp  machineStatusZone.h  machineStatusZone.ui  res.qrc
RationalVue/gui/MainWindow/: mainwindow.cpp  mainwindow.h  translation.txt  zh.qm  zh.ts
RationalVue/gui/MenuBarZone/: SARibbonApplicationButton.h  SARibbonBar.h  SARibbonButtonGroupWidget.h  SARibbonCategory.h  SARibbonCategoryLayout.h  SARibbonCheckBox.h  SARibbonComboBox.h  SARibbonContextCategory.h  SARibbonControlButton.h  SARibbonCtrlContainer.h  SARibbonElementCreateDelegate.h  SARibbonElementManager.h  SARibbonGallery.h  SARibbonGalleryGroup.h  SARibbonGalleryItem.h  SARibbonLineEdit.h  SARibbonMainWindow.h  SARibbonMenu.h  SARibbonPannel.h  SARibbonPannelOptionButton.h  SARibbonQuickAccessBar.h  SARibbonSeparatorWidget.h  SARibbonStackedWidget.h  SARibbonTabBar.h  SARibbonToolButton.h  SAWindowButtonGroup.h
RationalVue/gui/OperationZoneLeft/: createOperationZoneLeftControl.cpp  createOperationZoneLeftControl.h  it_icons.qrc  operationZoneLeftDockwidget.ui
RationalVue/gui/OperationZoneRight/: createoperationzoneright.cpp  createoperationzoneright.h  operationzoneright.ui  optzonerightresources.qrc
RationalVue/gui/PaintZone/: createPaintZoneControl.cpp  createPaintZoneControl.h  ima_icons.qrc  paintZoneDockwidget.ui
RationalVue/gui/StatusBarZone/: res.qrc  statusBarZone.cpp  statusBarZone.h
RationalVue/gui/WindowNotation/: WindowNotation.cpp  WindowNotation.h
RationalVue/network/: CNetTransmission.h  DetectResults.h  TCPServer.cpp  TCPServer.h  route.h  udpsender.cpp
